# cmake-vcpkg-clangd-vscode-template

./: CMakeLists.txt  CMakePresets.json  LICENSE  main.cpp  vcpkg.json
